[gd_scene load_steps=7 format=3 uid="uid://yitienbql1uy"]

[ext_resource type="Script" path="res://scene/gui/gamepauseui.gd" id="1_4orwv"]
[ext_resource type="PackedScene" uid="uid://bpwi77dqdbj5f" path="res://scene/menus/pausemenu.tscn" id="2_x0g5k"]
[ext_resource type="PackedScene" uid="uid://de7k8onp0awqt" path="res://scene/menus/inventory.tscn" id="3_1pygl"]
[ext_resource type="PackedScene" uid="uid://smav7ilugg5n" path="res://scene/shaders/blur.tscn" id="4_tsh6w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qo83e"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w4jl3"]
bg_color = Color(0, 0, 0, 1)

[node name="GamePauseUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_4orwv")

[node name="PauseCanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="PauseButton" type="Button" parent="PauseCanvasLayer"]
offset_left = 24.0
offset_top = 24.0
offset_right = 147.0
offset_bottom = 87.0
theme_override_font_sizes/font_size = 40
text = "Pause"

[node name="InventoryButton" type="Button" parent="PauseCanvasLayer"]
offset_left = 155.0
offset_top = 24.0
offset_right = 347.0
offset_bottom = 87.0
theme_override_font_sizes/font_size = 40
text = "Inventory"

[node name="TextLogButton" type="Button" parent="PauseCanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_bottom = 36.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Text Log"

[node name="PauseMenu" parent="PauseCanvasLayer" instance=ExtResource("2_x0g5k")]
process_mode = 2
visible = false

[node name="InventoryMenu" parent="PauseCanvasLayer" instance=ExtResource("3_1pygl")]
visible = false

[node name="TextLog" type="Control" parent="PauseCanvasLayer"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Blur" parent="PauseCanvasLayer/TextLog" instance=ExtResource("4_tsh6w")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="PauseCanvasLayer/TextLog"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -410.0
offset_top = -242.131
offset_right = 1190.0
offset_bottom = 651.869
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="PauseCanvasLayer/TextLog/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qo83e")

[node name="MarginContainer" type="MarginContainer" parent="PauseCanvasLayer/TextLog/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Panel" type="Panel" parent="PauseCanvasLayer/TextLog/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w4jl3")

[node name="TextLogText" type="RichTextLabel" parent="PauseCanvasLayer/TextLog/MarginContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 1

[node name="TextLogCloseButton" type="Button" parent="PauseCanvasLayer/TextLog"]
layout_mode = 2
offset_left = 874.522
offset_top = 648.0
offset_right = 1005.52
offset_bottom = 719.0
grow_horizontal = 2
grow_vertical = 2
text = "Close"

[connection signal="pressed" from="PauseCanvasLayer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PauseCanvasLayer/InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="PauseCanvasLayer/TextLogButton" to="." method="_on_text_log_button_pressed"]
[connection signal="pressed" from="PauseCanvasLayer/TextLog/TextLogCloseButton" to="." method="_on_text_log_close_button_pressed"]
